# image-epitome

./: .gitignore  CMakeLists.txt  README.md  default.cfg  settings.clang-format
inc/: epitome.h  factorize.h  fileutil.h  main.h  pch.h
src/: convolution_fftw.cpp  factorize.cpp  fileutil.cpp  main.cpp
src/epitome/: genre.cpp  init.cpp  learn.cpp  parallelxpatchsum_qxx.cpp
